bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:5: error: ')' expected but 'else' found.
  }else{
   ^