bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
  if ((21-n)>=0{
    Math.abs(n-21)
  }else{
    Math.abs(n-21)*2
  }
      
  
}